--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Unit_2_Unity_B00146133.loader.js";
+      var loaderUrl = buildUrl + "/unit 2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Unit_2_Unity_B00146133.data",
-        frameworkUrl: buildUrl + "/Unit_2_Unity_B00146133.framework.js",
-        codeUrl: buildUrl + "/Unit_2_Unity_B00146133.wasm",
+        dataUrl: buildUrl + "/unit 2.data",
+        frameworkUrl: buildUrl + "/unit 2.framework.js",
+        codeUrl: buildUrl + "/unit 2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project",
